@@ -1,3 +1,8 @@
+2005-01-01  Bruno Haible  <bruno@clisp.org>
+
+	* condition.lisp (maybe-continue): Don't call exitunconditionally.
+	Instead, decline the condition. Fixes bug introduced on 2002-04-22.
+
 2005-01-11  Sam Steingold  <sds@gnu.org>
 
 	* modules/syscalls/configure.in: check for <wchar.h>
